--- a/manager_prj/package.json
+++ b/manager_prj/package.json
@@ -6,7 +6,8 @@
     "db:serve": "json-server --watch db.json --port=3001",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.4",
@@ -14,7 +15,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.26",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "md5": "^2.3.0",
     "serve-static": "^1.14.2",
     "vue": "^2.6.11",
